@@ -5,7 +5,10 @@
 <%init>
 
 	my $result_set = Tab::ResultSet->retrieve($result_id) if $result_id;
+
 	$m->abort unless $result_set;
+
+	$m->redirect("bracket.mhtml?result_id=$result_id") if $result_set->bracket;
 
 	my @results = $result_set->results;
 
