@@ -1,4 +1,12 @@
 
+	- XML importer will pull the elim seeds from the CAT XML file in
+	  preparation for us being able to display a full bracket.
+
+	- Sanitized the room pool printout
+
+	- Fixed a bug where entering judges on the tournament admin side would not
+	  save judge coach ratings.
+
 	- Added TouchPunch support which should make the menus and drag and drop
 	  functions work better on touch devices such as iPads and smartphones.  (I
 	  haven't been able to extensively test this as I do not have an iPad or
